<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.sqlite2.AddGroupActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="2"
    >
        <TextView
            android:layout_row="0"
            android:layout_column="0"
            style="@style/TextViewAddGroup"
            android:text="@string/faculty"/>

        <Spinner
            android:layout_row="0"
            android:layout_column="1"
            android:entries="@array/faculties"
            style="@style/Spinner"
            android:id="@+id/spinnerFaculties"
            />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            style="@style/TextViewAddGroup"
            android:text="@string/course"/>

        <Spinner
            android:layout_row="1"
            android:layout_column="1"
            android:entries="@array/courses"
            style="@style/Spinner"
            android:id="@+id/spinnerCourses"
            />

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            style="@style/TextViewAddGroup"
            android:text="@string/nameGroup"
            />

        <EditText
            android:layout_row="2"
            android:layout_column="1"
            style="@style/EditText"
            android:inputType="text"
            android:layout_width="190dp"
            android:id="@+id/editTextNameGroup"
            android:hint="@string/hintNameGroup"
            />

        <Button
            android:layout_row="3"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttonAddGroupAct"
            android:text="@string/addGroup" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
