<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.sqlite2.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="1">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            style="@style/TextViewTitle"
            android:text="@string/titleGroup"/>

        <Spinner
            android:layout_column="0"
            android:layout_row="1"
            android:id="@+id/spinner"
            style="@style/Spinner"/>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_column="0"
            android:layout_row="2">

            <Button
                style="@style/WidthHeight"
                android:id="@+id/buttonMainRemoveGroup"
                android:text="@string/removeGroup" />

            <Button
                style="@style/WidthHeight"
                android:id="@+id/buttonMainAddGroup"
                android:text="@string/addGroup" />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_row="3"
            android:layout_column="0">

            <Button
                style="@style/WidthHeight"
                android:id="@+id/buttonMainSetHead"
                android:text="@string/setHeadGroup" />

        </LinearLayout>

    </GridLayout>
</android.support.constraint.ConstraintLayout>
