<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.sqlite2.SetHeadActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="2" >

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            style="@style/TextViewAddGroup"
            android:text="@string/nameGroup" />

        <Spinner
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="220dp"
            android:id="@+id/spinnerGroup" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            style="@style/TextViewAddGroup"
            android:text="@string/textViewStudent" />

        <Spinner
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="220dp"
            android:id="@+id/spinnerStudent"/>

        <Button
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            style="@style/buttonCentral"
            android:id="@+id/buttonSetHead"
            android:text="@string/setHeadGroup" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
